[package]
name = "timeboost-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
cliquenet = { path = "../cliquenet" }
either = { workspace = true }
futures = { workspace = true }
jiff = { workspace = true }
multisig = { path = "../multisig" }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-contract = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-types = { path = "../timeboost-types" }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
