[package]
name = "timeboost-contract"
description = "Adapters to bridge types and expose APIs for contract interactions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "deploy"
path = "src/binaries/deploy.rs"

[[bin]]
name = "register"
path = "src/binaries/register.rs"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
timeboost-types = { path = "../timeboost-types" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
alloy = { workspace = true }

[dev-dependencies]
anvil = { workspace = true }

