[package]
name = "timeboost-core"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
test = []
until = ["reqwest"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
committable = { workspace = true }
crossbeam-queue = { workspace = true }
multisig = { path = "../multisig" }
serde = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
timeboost-networking = { path = "../timeboost-networking" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
quickcheck = "1"
