[package]
name = "timeboost-core"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
test = []
until = ["reqwest"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
committable = { path = "../committable" }
crossbeam-queue = { workspace = true }
futures = { workspace = true }
multisig = { path = "../multisig" }
serde = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
sailfish-net = { path = "../sailfish-net" }
sailfish-types = { path = "../sailfish-types" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
quickcheck = "1"
