[package]
name = "timeboost-crypto"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
ark-ec = { workspace = true }
ark-secp256k1 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
digest = { workspace = true }
nimue = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "decryption"
harness = false
