[package]
name = "timeboost-crypto"
description = "Timeboost's threshold encryption scheme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
ark-ec = { workspace = true }
ark-secp256k1 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
committable = { workspace = true }
digest = { workspace = true }
nimue = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "decryption"
harness = false
