[package]
name = "timeboost-crypto"
description = "Timeboost's threshold encryption scheme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
committable = { workspace = true }
derive_more = { workspace = true }
digest = { workspace = true }
generic-array = { workspace = true }
multisig = { path = "../multisig" }
num-integer = "0.1"
# sadly, ark_std depends on rand_core@0.6.0, while rand_chacha@0.9.0 depends on rand_core@0.9.0
rand_chacha = "0.3.1"
rayon = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
spongefish = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-secp256k1 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "vess"
harness = false
