[package]
name = "timeboost-networking"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
bimap = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-utils = { path = "../timeboost-utils" }
multisig = { path = "../multisig" }
snow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
