[package]
name = "timeboost-networking"
version.workspace = true
edition.workspace = true
description.workspace = true

[[bench]]
name = "network_bytes"
harness = false

[dependencies]
bimap = { workspace = true }
bytes = { workspace = true }
criterion = "0.5"
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
thiserror = { workspace = true }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }
quickcheck = { workspace = true }
