[package]
name = "timeboost-proto"
description = "Timeboost protobuf types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
