[package]
name = "timeboost-sequencer"
description = "Timeboost sequencer protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
ark-std = { workspace = true }
arrayvec = { workspace = true }
bimap = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet" }
ethereum_ssz = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
sailfish = { path = "../sailfish" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-config = { path = "../timeboost-config" }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-types = { path = "../timeboost-types" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
timeboost-utils = { path = "../timeboost-utils" }
ark-std = { workspace = true }
bs58 = { workspace = true }
futures = { workspace = true }
