[package]
name = "timeboost-sequencer"
description = "Timeboost sequencer protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
metrics = ["dep:prometheus", "dep:times", "cliquenet/metrics", "sailfish/metrics"]

[dependencies]
alloy = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet" }
ethereum_ssz = { workspace = true }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rayon = { workspace = true }
sailfish = { path = "../sailfish" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-config = { path = "../timeboost-config" }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-types = { path = "../timeboost-types" }
tokio = { workspace = true }
tracing = { workspace = true }
# optional:
prometheus = { workspace = true, optional = true }
times = { path = "../times", optional = true }

[dev-dependencies]
ark-std = { workspace = true }
futures = { workspace = true }
test-utils = { path = "../test-utils", features = ["ports"] }
timeboost-utils = { path = "../timeboost-utils" }
