[package]
name = "timeboost-types"
description = "Timeboost API types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
arbitrary = ["dep:arbitrary", "sailfish-types/arbitrary"]

[dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
committable = { workspace = true }
ethereum_ssz = { workspace = true }
multisig = { path = "../multisig" }
rayon = { workspace = true }
sailfish-types = { path = "../sailfish-types" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-proto = { path = "../timeboost-proto" }
tracing = { workspace = true }

[dev-dependencies]
quickcheck = "1"
