[package]
name = "timeboost-types"
description = "Timeboost API types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
arbitrary = ["dep:arbitrary", "sailfish-types/arbitrary"]

[dependencies]
alloy = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
committable = { workspace = true }
ethereum_ssz = { workspace = true }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rayon = { workspace = true }
sailfish-types = { path = "../sailfish-types" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-proto = { path = "../timeboost-proto" }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
quickcheck = "1"
