[package]
name = "timeboost-types"
description = "Timeboost API types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
arbitrary = ["dep:arbitrary", "sailfish-types/arbitrary"]

[dependencies]
adapters = { path = "../adapters" }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true, features = ["derive"] }
ark-ec = { workspace = true }
ark-std = { workspace = true }
arrayvec = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
committable = { workspace = true }
ethereum_ssz = { workspace = true }
minicbor = { workspace = true }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rayon = { workspace = true }
sailfish-types = { path = "../sailfish-types" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
quickcheck = "1"
