[package]
name = "timeboost-util"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
hotshot-types = { workspace = true }
libp2p = { package = "libp2p", version = "0.53", default-features = false, features = [
    "macros",
    "autonat",
    "cbor",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "quic",
    "request-response",
    "secp256k1",
    "serde",
    "tokio",
] }
serde = { workspace = true }
serde-inline-default = { workspace = true }
serde_json = { workspace = true }
surf-disco = { workspace = true }
thiserror = { workspace = true }
tide-disco = { workspace = true }
tracing = { workspace = true }
