[package]
name = "timeboost-utils"
description = "utility crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
arbitrary = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet" }
ethereum_ssz = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-types = { path = "../timeboost-types", features = ["arbitrary"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
