[package]
name = "timeboost"
description = "decentralized sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "timeboost"
path = "src/binaries/timeboost.rs"

[[bin]]
name = "sailfish"
path = "src/binaries/sailfish.rs"

[features]
until = []

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-std = { workspace = true }
axum = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
cliquenet = { path = "../cliquenet" }
committable = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
metrics = { path = "../metrics", features = ["prometheus"]}
multisig = { path = "../multisig" }
prost = { workspace = true }
rand = { workspace = true }
sailfish = { path = "../sailfish" }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
timeboost-builder = { path = "../timeboost-builder" }
timeboost-config = { path = "../timeboost-config" }
timeboost-contract = { path = "../timeboost-contract" }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-proto = { path = "../timeboost-proto" }
timeboost-sequencer = { path = "../timeboost-sequencer" }
timeboost-types = { path = "../timeboost-types" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils", features = ["ports"]}
