[package]
name = "timeboost"
description = "decentralized sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
times = [
    "dep:times",
    "sailfish/times",
    "timeboost-builder/times",
    "timeboost-sequencer/times"
]

[dependencies]
alloy = { workspace = true }
ark-std = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
cliquenet = { path = "../cliquenet" }
ethereum_ssz = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
metrics = { path = "../metrics", features = ["prometheus"]}
multisig = { path = "../multisig" }
prost = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sailfish = { path = "../sailfish" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-builder = { path = "../timeboost-builder" }
timeboost-config = { path = "../timeboost-config" }
timeboost-contract = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
timeboost-proto = { workspace = true }
timeboost-sequencer = { path = "../timeboost-sequencer" }
timeboost-types = { path = "../timeboost-types" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
# optional:
times = { path = "../times", optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils", features = ["ports"]}

[[bin]]
name = "timeboost"
path = "src/binaries/timeboost.rs"

[[bin]]
name = "configure"
path = "src/binaries/configure.rs"

[[bin]]
name = "contract"
path = "src/binaries/contract.rs"
