[package]
name = "tx-generator"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
until = ["timeboost-core/until"]

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
timeboost-core = { path = "../timeboost-core" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }
