[package]
name = "yapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
cliquenet = { path = "../cliquenet" }
futures = { workspace = true }
reqwest = { workspace = true }
timeboost = { path = "../timeboost" }
timeboost-contract = { path = "../timeboost-contract" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }
