[package]
name = "yapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "yapper"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
cliquenet = { path = "../cliquenet" }
futures = { workspace = true }
multisig = { path = "../multisig" }
reqwest = { workspace = true }
timeboost = { path = "../timeboost" }
timeboost-contract = { path = "../timeboost-contract" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }
